apps/landingpage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage
spec:
  type: ClusterIP
  selector:
    app: landingpage
  ports:
  - name: http
    port: 8080
    targetPort: http
