apps/landingpage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage
spec:
  ingressClassName: kong
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landingpage
            port:
              number: 8080
